<resources>
    <string name="app_name">FunOS</string>
    <string name="sPassword">Password: </string>string>
    <string name="sName">Name: </string>string>
    <string name="sUserName">User Name: </string>string>
    <string name="sUserName2">User name</string>string>
    <string name="sOr">Or</string>string>
    <string name="sFun">Fun !</string>string>
    <string name="sLogin">Login</string>string>
    <string name="sSignIn">Sign in</string>string>
    <string name="sRePassword">Re-password: </string>string>
    <string name="sEMail">E-mail: </string>string>
    <string name="sBirthDay">BirthDay :</string>
    <string name="title_activity_main2">Main2Activity</string>string>
    <string name="sSpace"> </string>
    <string name="title_activity_login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_event">Add Event</string>
    <string name="section_format">Hello World from section: %1$d</string>string>
    <string name="sEvents">Events</string>
    <string name="sProfile">Profile</string>
    <string name="sStep3">Just 3 more step</string>
    <string name="sStep2">Just 2 more step</string>
    <string name="sStep1">Just 1 more step</string>
    <string name="sSelectImage">Select Profil Image from Gallery</string>
    <string name="sLoad">Load Image</string>
    <string name="sNext">Next</string>
    <string name="sMale">Male</string>
    <string name="sFemale">Female</string>
    <string name="discrFight">Fight</string>
    <string name="discrBall">Ball</string>
    <string name="discrFun">Fun</string>
    <string name="discrDice">Dice</string>
    <string name="discrKali">Kali Eskrima</string>
    <string name="discrWingChun">Wing Chun</string>
    <string name="discrTekvando">Tekvando</string>
    <string name="discrKarate">Karate</string>
    <string name="sFirst">1. </string>
    <string name="sSecond">2. </string>
    <string name="sThird">3. </string>
    <string name="sZero">Select 3 fun</string>
    <string name="sBasketball">Basketball</string>
    <string name="sFootball">Football</string>
    <string name="sAmericanFootball">Amerfican Football</string>
    <string name="sTennis">Tennis</string>
    <string name="sGolf">Golf</string>
    <string name="sFuns">Funs</string>
    <string name="sAddEvent">Add Event</string>
    <string name="sDescription">Description</string>
    <string name="sWhere">Where?</string>
    <string name="sTitle">Title</string>
    <string name="sPlayer1">Player1</string>
    <string name="sPlayer2">Player2</string>
    <string name="action_logout">Logout</string>
</resources>
