<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context="com.example.erama.myapplication.Activities.SignIn">

    <EditText
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/txtUserName"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtUserName"
        android:layout_alignStart="@+id/txtUserName"
        android:layout_below="@+id/txtUserName"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/txtEmail"
        app:layout_constraintTop_toBottomOf="@+id/txtUserName" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword"
        app:layout_constraintBottom_toTopOf="@+id/spDays" />

    <TextView
        android:id="@+id/lblProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/txtName"
        android:layout_toLeftOf="@+id/txtName"
        android:layout_toStartOf="@+id/txtName"
        android:text="@string/sName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/txtName"
        app:layout_constraintBottom_toTopOf="@+id/txtUserName"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.386" />

    <EditText
        android:id="@+id/txtUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtName"
        android:layout_alignStart="@+id/txtName"
        android:layout_below="@+id/txtName"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/txtPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <TextView
        android:id="@+id/lblPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sPassword"
        app:layout_constraintRight_toLeftOf="@+id/txtPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/lblProfileEmail"
        app:layout_constraintTop_toBottomOf="@+id/lblProfileUserName" />

    <TextView
        android:id="@+id/lblProfileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sEMail"
        app:layout_constraintRight_toLeftOf="@+id/txtEmail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintBottom_toTopOf="@+id/lblProfileBirthDay"
        app:layout_constraintTop_toBottomOf="@+id/lblPassword" />

    <Button
        android:id="@+id/btnJoinUs"
        android:layout_width="435dp"
        android:layout_height="52dp"
        android:text="@string/sNext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/lblProfileUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sUserName"
        app:layout_constraintRight_toLeftOf="@+id/txtUserName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/lblPassword"
        app:layout_constraintTop_toBottomOf="@+id/lblProfileName" />

    <Spinner
        android:id="@+id/spDays"
        android:layout_width="64dp"
        android:layout_height="34dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toLeftOf="@+id/spMonths"
        app:layout_constraintBottom_toTopOf="@+id/btnJoinUs"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        android:layout_marginBottom="38dp" />

    <Spinner
        android:id="@+id/spYears"
        android:layout_width="71dp"
        android:layout_height="34dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/rbFemale"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <Spinner
        android:id="@+id/spMonths"
        android:layout_width="64dp"
        android:layout_height="34dp"
        app:layout_constraintRight_toLeftOf="@+id/spYears"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/rbFemale"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <TextView
        android:id="@+id/lblProfileBirthDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sBirthDay"
        app:layout_constraintRight_toLeftOf="@+id/spDays"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/rbMale"
        app:layout_constraintTop_toBottomOf="@+id/lblProfileEmail" />

    <RadioButton
        android:id="@+id/rbMale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sMale"
        app:layout_constraintRight_toLeftOf="@+id/rbFemale"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnJoinUs" />

    <RadioButton
        android:id="@+id/rbFemale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sFemale"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/rbMale"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnJoinUs" />

</android.support.constraint.ConstraintLayout>
