<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/background2"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.erama.myapplication.Activities.LoginFragments.Fragment_profile">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/iwProfile"
            android:layout_width="141dp"
            android:layout_height="144dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/sSpace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.94"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.050000012"
            app:srcCompat="@drawable/hey" />

        <TextView
            android:id="@+id/lblProfileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/iwProfile"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp" />

        <TextView
            android:id="@+id/lblProfileEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sEMail"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/lblProfileBirthDay"
            app:layout_constraintRight_toLeftOf="@+id/iwProfile" />

        <TextView
            android:id="@+id/lblProfileUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sUserName"
            app:layout_constraintRight_toLeftOf="@+id/iwProfile"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/lblProfileName"
            app:layout_constraintHorizontal_bias="0.504" />

        <TextView
            android:id="@+id/lblProfileBirthDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sBirthDay"
            app:layout_constraintRight_toLeftOf="@+id/iwProfile"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/lblProfileUserName" />

        <TextView
            android:id="@+id/lblGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="7dp"
            android:text="@string/sSpace"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/iwProfile"
            app:layout_constraintTop_toBottomOf="@+id/lblProfileEmail"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <GridLayout
            android:id="@+id/grdProfileFUns"
            android:layout_width="208dp"
            android:layout_height="193dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/iwProfile"
            app:layout_constraintLeft_toRightOf="@+id/lblFunsAre"
            android:layout_marginLeft="8dp"
            tools:layout_editor_absoluteY="238dp"
            app:layout_constraintHorizontal_bias="0.523">

        </GridLayout>

        <TextView
            android:id="@+id/lblFunsAre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sFuns"
            app:layout_constraintTop_toBottomOf="@+id/lblGender"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/iwProfile"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.14999998" />
    </android.support.constraint.ConstraintLayout>
</RelativeLayout>
