<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context="com.example.erama.myapplication.Events.GeneralEvents.Fight">

    <GridLayout
        android:id="@+id/maingridlay"
        android:layout_width="368dp"
        android:layout_height="501dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp">

        <ImageView
            android:id="@+id/imageWingChun"
            android:layout_width="185dp"
            android:layout_height="155dp"
            android:layout_column="1"
            android:layout_row="0"
            android:contentDescription="@string/discrWingChun"
            app:srcCompat="@drawable/wchun" />

        <TextView
            android:id="@+id/lblWingChun"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:contentDescription="@string/discrWingChun"
            android:text="@string/discrWingChun"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/imageKarete"
            android:layout_width="185dp"
            android:layout_height="155dp"
            android:layout_column="1"
            android:layout_row="2"
            android:contentDescription="@string/discrKarate"
            app:srcCompat="@drawable/karete" />

        <TextView
            android:id="@+id/lblKarate"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:contentDescription="@string/discrKarate"
            android:text="@string/discrKarate"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/imageTekvando"
            android:layout_width="185dp"
            android:layout_height="155dp"
            android:layout_column="0"
            android:layout_row="2"
            android:contentDescription="@string/discrTekvando"
            app:srcCompat="@drawable/tekvando" />

        <TextView
            android:id="@+id/lblTekvando"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:contentDescription="@string/discrTekvando"
            android:text="@string/discrTekvando"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/imageKaliEskrima"
            android:layout_width="185dp"
            android:layout_height="155dp"
            android:layout_column="0"
            android:layout_row="0"
            android:contentDescription="@string/discrKali"
            app:srcCompat="@drawable/kali" />

        <TextView
            android:id="@+id/lblKaliEskrima"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:contentDescription="@string/discrKali"
            android:text="@string/discrKali"
            android:textAlignment="center" />
    </GridLayout>
</android.support.constraint.ConstraintLayout>
